2006-06-08  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu-console.c (script_fu_eval_run):
	in case of an error, output the SIOD error message to stderr.

	* plug-ins/script-fu/siod-wrapper.c: minor cleanup.

2006-06-08  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu-scripts.c
	* plug-ins/script-fu/siod-wrapper.c: allow CSS color keywords to
	be used in place of the '(r g b) color notation.

	* plug-ins/script-fu/scripts/test-sphere.scm: documented this new
	feature.

	* plug-ins/script-fu/scripts/*.scm: replaced some colors with
	color names.

2006-06-08  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/animationplay.c (menu_popup): do not use
	gtk_menu_attach_to_widget() but gtk_menu_set_screen(). Menus don't
	like to be attached multiple times.

2006-06-07  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/core/gimpimage-arrange.[ch]: added, utility function for
	aligning and arranging things in an image.

	* app/core/gimpitem-align.[ch}: removed, no longer needed.

	* app/core/gimpimage-item-list.[ch] (gimp_image_item_list_align):
	removed this function, no longer used.
	
	* app/core/Makefile.am: changes described above.
	
	* app/core/gimpguide.c: remove bit of cruft left accidentally.
	
	* app/tools/gimpalignoptions.[ch]: remove "alignment type"
	option, not needed at this point.
	
	* app/tools/gimpaligntool.[ch]: numerous changes, most
	importantly ability to align guides, and use them for
	alignment.  More work coming on this tool.

2006-06-07  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/core/gimpguide.[ch]: add "removed" signal and associated
	paraphernalia.

	* app/core/gimpimage-guides.c (gimp_image_remove_guide): call
	gimp_guide_removed() to cause signal emission.
	
2006-06-07  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpnewrectselecttool.c: removed extra semicolon to
	fix build on Solaris (bug #344203).

2006-06-07  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
